[project]
name = "rpc_diism"
version = "0.3.0"
license = "GPL-3.0-or-later"
description = "Python library for the Robust and Predictive Control course at DIISM, Unisi"
authors = [
    {name = "Gianni Bianchini"}
]
requires-python = ">=3.10"
dependencies = [
    "control",
    "slycot",
    "matplotlib",
    "numpy",
    "dkpy",
    "cvxpy"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
